--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
     <hr>
     <!--He y tarjetas-->
     <section class="container mx-auto">
-      <h1 class="text-center cabin p-3">RECETAS RELACIONADAS</h1>
+      <h1 class="text-center p-3 c-bol">RECETAS RELACIONADAS</h1>
       <!--tarjetas -->
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
             <img src="/assets/img/recipe-card-1.png" class="card-img-top" alt="...">
             <div class="card-body h-100">
-              <h5 class="card-title cabin ">PANQUEQUES CON MANJAR Y CREMA</h5>
+              <h5 class="card-title c-bol ">PANQUEQUES CON MANJAR Y CREMA</h5>
               <p class="card-text">Mus enim elementum dignissim class eleifend justo, 
                 ut nunc magnis est vulputate nostra, blandit erat luctus faucibus orci.</p>
             </div>
@@ -248,7 +248,7 @@
           <div class="card h-100">
             <img src="/assets/img/recipe-card-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title cabin">TIRAMISÚ</h5>
+              <h5 class="card-title c-bol">TIRAMISÚ</h5>
               <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, 
                 proin phasellus lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
             </div>
@@ -258,7 +258,7 @@
           <div class="card h-100">
             <img src="/assets/img/recipe-card-3.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title cabin">PLATEADA</h5>
+              <h5 class="card-title c-bol">PLATEADA</h5>
               <p class="card-text">Cubilia elementum posuere arcu rhoncus egestas lectus, 
                 diam aliquam laoreet ac eleifend risus, urna auctor inceptos mattis dapibus.</p>
             </div>
