--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- se agrega la segunda fuente cabin-->
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
@@ -73,7 +73,7 @@
           <div class="col-12 col-md-6 my-2">
             <!-- aca imagen -->
             <img class="img-fluid"
-              src="/assets/img/principal.jpg"
+              src="./assets/img/principal.jpg"
               alt="foto principal"
               
             />
@@ -236,7 +236,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="/assets/img/recipe-card-1.png" class="card-img-top" alt="...">
+            <img src="./assets/img/recipe-card-1.png" class="card-img-top" alt="...">
             <div class="card-body h-100">
               <h5 class="card-title c-bol ">PANQUEQUES CON MANJAR Y CREMA</h5>
               <p class="card-text">Mus enim elementum dignissim class eleifend justo, 
@@ -246,7 +246,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/img/recipe-card-2.png" class="card-img-top" alt="...">
+            <img src="./assets/img/recipe-card-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title c-bol">TIRAMISÚ</h5>
               <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, 
@@ -256,7 +256,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="/assets/img/recipe-card-3.png" class="card-img-top" alt="...">
+            <img src="./assets/img/recipe-card-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title c-bol">PLATEADA</h5>
               <p class="card-text">Cubilia elementum posuere arcu rhoncus egestas lectus, 
@@ -313,7 +313,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/scriptJQ.js"></script>
+    <script src="./assets/js/scriptJQ.js"></script>
     <!--scrip para habilitar tooltips-->
     <script>
       const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
